# hagrid

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: README.md  spec.md  threat-model.md
docs/adr/: 001-fingerprint-format.md  002-reference-identity.md  003-key-hierarchy.md  004-db-encryption.md  005-grouping-flow.md  006-db-constraints.md  007-mcp-naming.md  008-platform-scope.md  009-policy-engine.md  010-watch-mode.md  011-rotation-workflow.md  012-notifications.md  README.md
docs/handoffs/: dev-agent-01-release-and-ci.md  dev-agent-02-policy.md  dev-agent-03-watch.md  dev-agent-04-rotation.md  dev-agent-05-notifications.md  dev-agent-06-release-hardening.md  dev-agent-07-tui-foundation.md
docs/plan/: post-v0.1-execution-plan.md
docs/releases/: README.md  v0.1.0.md  v0.2.0.md
docs/reports/: dogfooding-2026-03-04.md
docs/runbooks/: 01-release-and-ci-bootstrap.md  02-policy-engine.md  03-watch-mode.md  04-rotation.md  05-notifications.md  06-release-hardening.md  07-tui-foundation.md
patterns/: default.toml
src/: lib.rs  main.rs
src/cli/: audit.rs  drift.rs  export.rs  forget.rs  group.rs  init.rs  list.rs  mod.rs  rotate.rs  rotate_info.rs  scan.rs  show.rs  status.rs  suggest.rs  ungroup.rs  watch.rs
tests/: adversarial_tests.rs  cli_disambiguation_tests.rs  disambiguation_tests.rs  dogfood_test.rs  drift_tests.rs  fingerprint_tests.rs  group_tests.rs  identity_tests.rs  notify_tests.rs  parser_tests.rs  policy_tests.rs  rotate_tests.rs  scan_tests.rs  suggest_tests.rs  tui_tests.rs  watch_tests.rs
(+34 files in other folders)
