[package]
name = "hagrid"
version = "0.2.0"
edition = "2021"
description = "Keeper of Keys — local-first secret lifecycle management"
license = "MIT"
repository = "https://github.com/tetsuotrees/hagrid"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
zeroize = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
security-framework = "2"
dirs = "5"
walkdir = "2"
ignore = "0.4"
colored = "2"
thiserror = "1"
notify = "6"
rand = "0.8"
rpassword = "5"
ureq = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
